cabal-version:      3.0
name:               EVP
version:            0
synopsis:           Environment Variable Parser
description:        See README.md
homepage:           https://github.com/fumieval/EVP
license:            BSD-3-Clause
license-file:       LICENSE
author:             Fumiaki Kinoshita
maintainer:         fumiexcel@gmail.com
copyright:          Copyright (c) 2023 Fumiaki Kinoshita
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:
    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  EVP
    build-depends:    base >=4.16, containers, data-default-class, text, yaml
    hs-source-dirs:   src
    default-language: GHC2021

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
      tests
  build-depends:
      base >=4.7 && <5
    , EVP
  default-language: GHC2021
  ghc-options: -Wall -Wcompat